--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "laravel-elixir": "^4.1.0",
     "laravel-elixir-vueify": "^1.0.1",
     "local-storage": "^1.4.2",
+    "localforage": "^1.3.1",
     "lodash": "^3.10.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
